objects/National_Producer_Number__c.object
<CustomObject>
    <fields>
        <fullName>House_Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Producer House</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>National Producer Numbers</relationshipLabel>
        <relationshipName>National_Producer_Numbers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NPN__c</fullName>
        <label>NPN</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Producer_Count__c</fullName>
        <label>Producer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>National Producer Number</label>
    <nameField>
        <displayFormat>NPN-{000000}</displayFormat>
        <label>National Producer Number Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>National Producer Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>